new build process (propensity)

--- a/force-app/main/default/classes/dataSetup.cls
+++ b/force-app/main/default/classes/dataSetup.cls
@@ -53,13 +53,13 @@ public with sharing class dataSetup {
         insert events;
 
         // grab the users
-        list<user> users = [select id from user where usertype = 'Standard'];
+        list<user> users = [select id, firstname, lastname from user where usertype = 'Standard' and firstname != 'CPQ'];
         list<Volunteers__c> vols = new list<Volunteers__c>();
 
         list<id> volunteerIds = new list<id>();
         for (user u:users){
-            // 1 to 5 distribution of likelihood to volunteer
-            integer propensity = integer.valueOf(Math.floor(Math.random()*5));
+            // 2 to 7 distribution of likelihood to volunteer
+            integer propensity = 2 + integer.valueOf(Math.floor(Math.random()*5));
             for (integer k=0; k<propensity; k++){
                 volunteerIds.add(u.Id);
             }
